--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Угадай число</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="//api.ok.ru/js/fapi5.js" defer="defer"></script>
+    <script type="text/javascript" src="https://connect.ok.ru/connect.js"></script>
 </head>
 <body>
 <div id="main-menu" class="screen">
